[workspace]
resolver = "2"
members = [ #multiline
  "a7i-api/",
]

package.edition = "2021"
package.version = "0.1.0"
package.rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.68", features = [
  "anyhow",
  "logging",
  "cors",
  "oapi",
  "jwt-auth",
  "rustls",
  "catch-panic",
  "cookie",
  "serve-static",
  "test",
  "http2",
  "quinn",
] }
serde = "1.0.196"
serde_yaml = "0.9.31"
thiserror = "1.0.57"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing-subscriber = "*"
