[workspace]
resolver = "2"
members = [ #multiline
  "a7i-api/",
]

package.edition = "2021"
package.version = "0.1.0"
package.rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
rcgen = "0.13"
rust-embed = "8.0.0"
salvo = { version = "0.68", features = [
  "anyhow",
  "catch-panic",
  "cookie",
  "cors",
  "force-https",
  "logging",
  "quinn",
  "rustls",
  "serve-static",
  "test",
] }
serde = "1.0.196"
serde_yaml = "0.9.31"
thiserror = "1.0.57"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "*"
uuid = { version = "1.4.1", features = ["fast-rng", "macro-diagnostics", "v4"] }
